--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,9 +10,6 @@ commands:
       image_tag:
         type: string
         default: "latest"
-      additional:
-        type: string
-        default: ""
     steps:
       - run: >
           printf '{"commit":"%s","version":"%s","source":"https://github.com/%s/%s","build":"%s"}\n'
@@ -26,7 +23,7 @@ commands:
           name: Build docker image and push to repo
           command: |
             docker version
-            docker build -t app:build -f << parameters.dockerfile >> << parameters.additional >> .
+            docker build -t app:build -f << parameters.dockerfile >> .
             docker tag app:build "${DOCKERHUB_REPO}":<< parameters.image_tag >>
             docker login -u "${DOCKERHUB_USER}" -p "${DOCKERHUB_PASS}"
             docker push "${DOCKERHUB_REPO}":<< parameters.image_tag >>
@@ -48,15 +45,6 @@ jobs:
       - build_and_push_container_image:
           image_tag: "${CIRCLE_TAG}"
           dockerfile: "Dockerfile.deploy"
-  build-local-dev:
-    machine: true
-    working_directory: ~/addons-server
-    steps:
-      - checkout
-      - build_and_push_container_image:
-          image_tag: latest-local-dev
-          dockerfile: "Dockerfile"
-          additional: "--build-arg USER_ID=$(id -u) --build-arg GROUP_ID=$(id -g)"
 
 workflows:
   version: 2
@@ -65,7 +53,7 @@ workflows:
       - build:
           filters:
             branches:
-              only: master,12366-fix-docker-builds
+              only: master
       - build-tag:
           filters:
             tags:
